feat: public API + kill event + Tarkov AI fixes
- Add EMWMBridgeAPI (static metadata readers for Chemdah integration)
- Add EMWMKillEvent (Bukkit event, KillMethod: GUN/GRENADE/MELEE/EXPLOSION/OTHER)
- Add PluginTestRunner for in-game /emwm test harness
- Fix ExtremeEventManager movement detection (movingTooMuch was always true)
- Restore tier durability multiplier in unified bind flow
- Add P1 unit tests for api/events/config/listener packages (coverage 33%)